FRI-121 Add traceability RF2 comparison test. Calls traceability service.